--- a/nginx_oa.conf
+++ b/nginx_oa.conf
@@ -10,7 +10,7 @@ server {
   # 监听80端口
   listen 80;
   # 设置服务器域名
-  server_name 172.24.13.157 127.0.0.1;
+  server_name 113.44.54.231 127.0.0.1;
   # 设置编码方式
   charset utf-8;
   # 客户端请求服务器携带最大的数据
@@ -26,7 +26,7 @@ server {
   }
   # 访问django项目的的静态文件
   location /static {
-    alias /www/static/;
+    alias /www/static;
   }
   # 访问django项目的api
   location /api {
