--- a/nginx_oa.conf
+++ b/nginx_oa.conf
@@ -26,7 +26,10 @@ server {
   }
   # 访问django项目的的静态文件
   location /static {
-    alias /www/static;
+    alias /www/staticfiles;
+  }
+   location /api/media/ {
+    alias /www/media/;  
   }
   # 访问django项目的api
   location /api {
