--- a/nginx_oa.conf
+++ b/nginx_oa.conf
@@ -17,26 +17,26 @@ server {
   client_max_body_size 10M;
   # 访问首页，直接返回vue项目的index.html文件
   location / {
-    root /www/dist;
+    root /www/dist/;
     index index.html;
   }
   # 访问vue项目的静态文件
-  location /assets {
-    alias /www/dist/assets;
+  location /assets/ {
+    alias /www/dist/assets/;
   }
   # 访问django项目的的静态文件
-  location /static {
-    alias /www/staticfiles;
+  location /static/ {
+    alias /www/staticfiles/;
   }
    location /api/media/ {
-    alias /www/media/;  
+    alias /www/media/;
   }
   # 访问django项目的api
-  location /api {
+  location /api/ {
     include /etc/nginx/uwsgi_params;
     uwsgi_pass oa;
   }
-  # nginx日志
+  # nginx日志 
   access_log /data/log/access.log;
   error_log /data/log/error.log;
 }
